# FastAPI-Celery-Docker

./: .gitignore  CHANGELOG.md  DEBUG.md  DEBUG_SETUP_COMPLETE.md  FLOWER.md  FLOWER_SUMMARY.md  QUICK_ACCESS.md  README.md  TASKS_API.md  docker-compose.debug.yml  docker-compose.yml
.devcontainer/: QUICK_START.md  README.md  devcontainer.json
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  debug_server.py  entrypoint.sh  init_db.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20241016_1200_001_initial_migration.py
backend/app/: __init__.py  celery_app.py  config.py  crud.py  db.py  helpers.py  main.py  models.py  schemas.py  tasks.py
backend/tests/: conftest.py  test_api.py  test_celery_tasks.py  test_crud.py  test_db.py  test_main_extended.py
